# MacroBoard

./: .gitignore  packet_desc.md
MacroBoard-ESP/: platformio.ini  workspace.code-workspace
MacroBoard-ESP/include/: buffer.h  button_array.h  buttons.h  display.h  logo.h  packet.h  payloads.h  range.h  rotary_encoder.h  serialize.h  server.h  slide_pot.h  wifi_helpers.h
MacroBoard-ESP/src/: _wifi_data.h  amain.cpp  button_helper.h  buttons.h  display.h  main.cpp  server.cpp  server.h  wifi_helpers.h
MacroBoard-PC/: Cargo.toml
MacroBoard-PC/resources/: Logo.aseprite  Logo_Bar.aseprite  Logo_Bar.xbm
MacroBoard-PC/src/: button_payload.rs  client.rs  main.rs  packet.rs  rot_enc_payload.rs  slide_pot_payload.rs  string_payload.rs
