[package]
name = "app"
version = "0.1.0"
authors = ["Ole <refsa22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0.1"
bincode = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
chrono = "0.4"